[package]
name = "eex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.2", features = ["macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
cucumber = "0.15.3"


[[test]]
name = "start_up"
harness = false